Responsive - fluid fix, refactoring spacing, mimor fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,39 +6,67 @@ html {
   font-family: Basic Sans, sans-serif;
 }
 
+body {
+  margin: 0;
+  padding: $spacing-safe-area-desktop; /*$spacing-safe-area-desktop:2.25rem;)*/
+}
+
 h1 {
   font-size: 2.25em;
+  margin: 0;
 }
 
 p {
   color: $colors-text-paragraph;
   font-family: $font-family-secondary;
   font-size: 1em;
+  margin: 0;
 }
 
 .hide {
   display: none;
 }
 
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-grid-md;
+}
+
+.container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  row-gap: $spacing-grid-md;
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
 button {
-   padding: 1em;
-   border-radius: $radius-lg;
-   text-align: center;
-   border: none;
-   cursor: pointer;
-   font-family: $font-family-secondary;
-   font-size: 1em;
-   letter-spacing: 0.12rem;
-   text-transform: uppercase;
-   & svg {
-      margin-bottom: -0.125em;
-      padding-right: 0.25em;
-      height: 1em;
-      width: 1em;
-    }
+  padding: 1em;
+  border-radius: $radius-lg;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  font-family: $font-family-secondary;
+  font-size: 1em;
+  letter-spacing: 0.12rem;
+  text-transform: uppercase;
+  & svg {
+    margin-bottom: -0.125em;
+    padding-right: 0.25em;
+    height: 1em;
+    width: 1em;
+  }
 }
 
 .reservation-button {
+  /*
+  position: absolute;
+  right: $spacing-safe-area-desktop;
+  top: $spacing-safe-area-desktop;
+*/
   color: $colors-button-primary-text;
   background-image: $primary-gradient;
   &:hover {
@@ -62,10 +90,11 @@ button {
   flex-direction: column;
   min-width: 17.5rem;
   max-width: 31.375rem;
-  padding: var(--spacing-safe-area-mobile, 1rem);
-  gap: var(--spacing-grid-sm, 0.75rem);
+  padding: $spacing-safe-area-mobile;
+  padding-bottom:0.375em;
+  gap: $spacing-grid-sm;
   border-radius: $radius-lg;
-  background: var(--colors-background-body, #fff);
+  background: #fff;
   box-shadow: 0 0.25em 1.25em 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -117,8 +146,12 @@ button {
   height: 0.0625rem;
   border: 0;
   border-top: 0.0625rem solid #d2cfd0;
-  margin: 1em auto;
+  margin: $spacing-grid-sm auto;
   padding: 0;
+}
+
+.container-menu {
+  margin-bottom: 0.125em; /*correction container-checkboxes*/
 }
 
 ul.menu {
@@ -151,6 +184,13 @@ li.menu-item {
   flex-direction: row;
   gap: 1em;
   margin-top: 0.125em; /*correction*/
+  align-items: flex-start;
+  flex-wrap: wrap;
+  row-gap: $spacing-grid-md;
+}
+
+.checkbox-wrapper {
+  min-width: 18.75rem;
 }
 
 .checkbox-description {
