--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,3 +15,8 @@ $colors-input-text-placeholder: #a49fa1;
 $colors-tabs-unactive-text: #493f42;
 $colors-tabs-active-text: #3772ff;
 $colors-button-primary-link-text: #3772ff;
+
+$spacing-safe-area-desktop:2.25em;
+$spacing-safe-area-mobile:1rem;
+$spacing-grid-md:1.5em;
+$spacing-grid-sm:0.75em;
